# templates

./: flake.nix
R/: .envrc  flake.nix  hello.qmd  hello.r
java/: .gitignore  default.nix  flake.nix  jdt-language-server.nix  pom.xml  readme.org
java/src/main/java/com/projectName/: Project.java
python/: README.org  flake.nix  package.nix
stm32-c/: justfile
stm32-rs/: .gitignore  Cargo.toml  Embed.toml  flake.nix  memory.x  readme.org
stm32-rs/.cargo/: config.toml
stm32-rs/openocd/: ocd_stlv2_stm32f1.cfg
stm32-rs/src/: main.rs
templates/java/: .envrc  .gitignore  default.nix  flake.nix  jdtls.nix  readme.org
templates/java/src/test/java/com/projectName/: ProjectTest.java
