[package]
name = "rust-stm32"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.3"
embedded-hal = "0.2.7"
nb = "1.1.0"
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
rtt-target = "0.4.0"
stm32f1 = { version = "0.15.1", features = ["stm32f103", "rt" ] }
stm32f1xx-hal = "0.10.0"
# cortex-m-semihosting = "0.5.0"

[features]
f103 = [ "stm32f1xx-hal/rt", "stm32f1xx-hal/medium",  "stm32f1xx-hal/stm32f103" ]
default = ["f103"]
